--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 
 services:
   db:
@@ -17,7 +17,7 @@ services:
     build: ./packages/server
     container_name: sigbba-node-container
     ports:
-      - "3333:3333"
+      - '3333:3333'
     volumes:
       - ./packages/server:/usr/app
       - ./node_modules:/usr/app/node_modules
@@ -25,3 +25,12 @@ services:
       - db
     links:
       - db
+
+  web:
+    build: ./packages/web
+    container_name: sigbba-web-container
+    ports:
+      - 3000:3000
+    volumes:
+      - ./packages/web:/usr/app
+      - ./node_modules:/usr/app/node_modules
