chore: corrige caminho para cli no script typeorm

--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -6,6 +6,6 @@ TYPEORM_DATABASE = sigbba
 TYPEORM_PORT = 5432
 TYPEORM_SYNCHRONIZE = false
 TYPEORM_LOGGING = true
-TYPEORM_ENTITIES = src/app/models/**/*.ts
+TYPEORM_ENTITIES = src/app/entities/**/*.ts
 TYPEORM_MIGRATIONS = src/database/migrations/**/*.ts
 TYPEORM_MIGRATIONS_DIR = src/database/migrations
