--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev:debug": "npx nodemon --exec ts-node src/server.ts --inspect=0.0.0.0 src/server.js",
     "dev": "npx nodemon --exec ts-node src/server.ts",
-    "typeorm": "npx ts-node ../../node_modules/typeorm/cli.js"
+    "typeorm": "npx ts-node ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
