--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "web",
+  "name": "@sigbba/web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.8",
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
+    "flickity": "^2.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.2",
+    "styled-components": "^5.3.1",
+    "styled-icons": "^10.38.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -38,5 +43,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/flickity": "^2.2.6",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.14"
   }
 }
