--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "dev:debug": "npx nodemon --exec ts-node src/server.ts --inspect=0.0.0.0 src/server.js",
+    "dev:debug": "npx nodemon --exec ts-node src/server.ts --inspect=0.0.0.0:9229 --nolazy src/server.js",
     "dev": "npx nodemon --exec ts-node src/server.ts",
     "typeorm": "npx ts-node ./node_modules/typeorm/cli.js"
   },
