--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,11 +9,13 @@
     "typeorm": "npx ts-node ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
