--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.1.8",
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
+    "axios": "^0.21.4",
     "flickity": "^2.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
