--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.2",
+    "sweetalert2": "^11.1.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
