--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,8 +7,8 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-beta.5",
     "@material-ui/icons": "^4.11.2",
-    "@mui/lab": "^4.0.0-alpha.60",
     "@material-ui/styles": "^4.11.4",
+	"@mui/lab": "5.0.0-alpha.50",
     "@mui/x-data-grid": "^4.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
