Revert "Merge branch 'main' of https://github.com/joasweslei/SIGBBA"
This reverts commit 1cea8f4413ea7a1c9f2a116d6005cf0cf8fd1df3, reversing
changes made to 3d19c576dddef43ac5ecde4e8b5c059f0354dde4.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev:debug": "npx nodemon --exec ts-node src/server.ts --inspect=0.0.0.0:9229 --nolazy src/server.js",
     "dev": "npx nodemon --exec ts-node src/server.ts",
-    "typeorm": "npx ts-node ../../node_modules/typeorm/cli.js",
-    "typeorm:docker": "npx ts-node ./node_modules/typeorm/cli.js"
+    "typeorm": "npx ts-node ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
