--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,17 @@
-version: '3.8'
+version: '3.4'
 
 services:
   db:
     image: postgres:latest
-    container_name: sigbba-postgres-container
+    container_name: sigbba-pg-container
     ports:
-      - 5432:5432/tcp
+      - 5431:5432/tcp
     environment:
       POSTGRES_DB: sigbba
       POSTGRES_USER: root
       POSTGRES_PASSWORD: docker
     volumes:
       - /var/lib/postgres
-    deploy:
-      resources:
-        limits:
-          memory: 1024M
-        reservations:
-          memory: 512M
 
   server:
     build: ./packages/server
@@ -30,14 +24,6 @@ services:
       - ./node_modules:/usr/app/node_modules
     depends_on:
       - db
-    links:
-      - db
-    deploy:
-      resources:
-        limits:
-          memory: 1024M
-        reservations:
-          memory: 512M
 
   web:
     build: ./packages/web
@@ -47,9 +33,8 @@ services:
     volumes:
       - ./packages/web:/usr/app
       - ./node_modules:/usr/app/node_modules
-    deploy:
-      resources:
-        limits:
-          memory: 1024M
-        reservations:
-          memory: 512M
+
+networks:
+  default:
+    external: true
+    name: my-network
