--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,14 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.4.1",
+    "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@mui/core": "latest",
-    "@mui/material": "latest",
-    "@mui/icons-material": "latest",
-    "@mui/styles": "latest",
-    "@mui/x-data-grid": "latest",
-    "@mui/lab": "latest",
+    "@mui/icons-material": "^5.1.0",
+    "@mui/lab": "^5.0.0-alpha.54",
+    "@mui/material": "^5.1.0",
+    "@mui/styles": "^5.1.0",
+    "@mui/x-data-grid": "^5.0.0-beta.7",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -19,8 +18,8 @@
     "@unform/web": "^2.1.6",
     "axios": "^0.21.4",
     "flickity": "^2.2.2",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
