--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -17,6 +17,7 @@
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "axios": "^0.21.4",
+    "date-fns": "^2.25.0",
     "flickity": "^2.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
